# agentic-chatbot

./: .gitignore  .pre-commit-config.yaml  DESIGN.md  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.antigravity/: rules.md
.context/: coding_style.md
app/: main.py
app/agents/: base.py  callbacks.py  dummy_agent.py  llm.py  llm_agent.py  models.py  registry.py  utils.py
app/agents/examples/: dummy_agent.py  example_agent.py  example_callbacks.py  example_tools.py
app/agents/tools/: base.py  vertexai_rag_engine_tool.py  vertexai_rag_tool.py  vertexai_search_tool.py
app/api/: dependencies.py
app/api/routers/: chat.py
app/core/: config.py  database.py  logging.py  logging.yaml
app/models/: chat.py
app/schemas/: chat.py  openai_chat.py
app/services/: chat_service.py  memory_service.py  storage_service.py
app/tools/: base.py
static/: index.html
static/css/: style.css
static/js/: api.js  app.js  state.js  ui.js
static/js/ui/: citations.js  composer.js  index.js  messages.js  sidebar.js  traces.js  welcome.js
tests/: conftest.py
tests/agents/: test_base.py  test_callbacks.py  test_llm_agent.py  test_models.py  test_registry.py  test_utils.py
tests/agents/tools/: test_tool_base.py
tests/api/: test_chat_router.py
tests/integration/: test_full_flow.py
tests/schemas/: test_chat_schema_citations.py
tests/services/: test_chat_service.py  test_memory_service.py  test_storage_service.py
